# passwords-app

./: LICENSE  README.md  index.html  package-lock.json  package.json  passwords.afphoto  pnpm-lock.yaml
src/: App.css  App.tsx  hooks.ts  natives.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  syllables.rs  words.rs
