[package]
name = "passwords-app"
version = "0.1.3"
description = "A random password generator"
authors = ["hiql<dev.hiql@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passwords_app_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
passwords = { version = "3.1.16", features = ["common-password", "crypto"] }
rand = "0.8.5"
md5 = "0.7.0"
base64 = "0.22.1"
bcrypt = "0.15.1"
sha2 = "0.10.8"
hex = "0.4.3"
zxcvbn = "3.1.0"
sha1 = "0.10.6"
